--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+    <script src="https://tag.clearbitscripts.com/v1/pk_9032b5ba1e03b667602f6ff35507dee4/tags.js" referrerpolicy="strict-origin-when-cross-origin"></script>
+</head>
+
 <div>
     Freemium QA Home
 </div>
