--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <script src="https://clearbit-x.dev.clearbit.com/v1/pk_46adc3cfb7e3970b1a216199622ed46e/tags.js" referrerpolicy="strict-origin-when-cross-origin"></script>
+    <script src="https://tag.clearbitscripts.com/v1/pk_9032b5ba1e03b667602f6ff35507dee4/tags.js" referrerpolicy="strict-origin-when-cross-origin"></script>
 </head>
 
 <div>
