--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     Marketo Form
 </div>
 <div>
-    <script src="//767-JVS-761.mktoweb.com/js/forms2/js/forms2.min.js"></script> <form id="mktoForm_1018"></form> <script>MktoForms2.loadForm("//767-JVS-761.mktoweb.com", "767-JVS-761", 1018);</script>
+    <script src="https://767-JVS-761.mktoweb.com/js/forms2/js/forms2.min.js"></script> <form id="mktoForm_1018"></form> <script>MktoForms2.loadForm("//767-JVS-761.mktoweb.com", "767-JVS-761", 1018);</script>
 </div>
