--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <script src="https://clearbit-x.dev.clearbit.com/v1/pk_69f57d1dd75bce4e368c8395225900c8/tags.js" referrerpolicy="strict-origin-when-cross-origin"></script>
+    <script src="https://tag.clearbitscripts.com/v1/pk_69f57d1dd75bce4e368c8395225900c8/tags.js" referrerpolicy="strict-origin-when-cross-origin"></script>
 </head>
 
 <div>
